# termplay

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  README_template.md  flake.nix  gen_readme.sh  index.css  index.html  index.js  release.nix  shell.nix
examples/: main.rs  termplay.rs
snap/: snapcraft.yaml
src/: colors.rs  img.rs  interactive.rs  lib.rs  main.rs  music.rs  playback.rs  preprocess.rs  resizer.rs  screen.rs  video.rs  youtube.rs  ytdl.rs  zoomer.rs
src/converters/: color256.rs  halfblock.rs  mod.rs  sixel.rs  truecolor.rs
termplay-wasm/: .gitignore  Cargo.toml
termplay-wasm/src/: lib.rs
