[package]
authors = ["jD91mZM2 <me@krake.one>"]
name = "termplay"
description = "Play images/videos in your terminal"
version = "2.0.1"
license-file = "LICENSE"
homepage = "https://jD91mZM2.github.io/termplay/"

[dependencies]
image = "0.18.0"

[dependencies.failure]
optional = true
version = "0.1.1"

[dependencies.gstreamer]
optional = true
version = "0.11.1"

[dependencies.gstreamer-app]
optional = true
version = "0.11.0"

[dependencies.termion]
optional = true
version = "1.5.1"

[dev-dependencies]
clap = "2.31.2"
failure = "0.1.1"

[features]
default = ["gst", "sixel"]
gst = ["failure", "gstreamer", "gstreamer-app", "termion"]
sixel = []
