[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "Play images/videos in your terminal"
homepage = "https://jD91mZM2.github.io/termplay/"
license-file = "LICENSE"
name = "termplay"
readme = "README.md"
version = "2.0.5"

[dependencies]
image = "0.19.0"

[dependencies.clap]
# only used by binary
optional = true
version = "2.31.2"

[dependencies.failure]
optional = true
version = "0.1.1"

[dependencies.gstreamer]
optional = true
version = "0.11.2"

[dependencies.gstreamer-app]
optional = true
version = "0.11.2"

[dependencies.termion]
optional = true
version = "1.5.1"

[features]
bin = ["clap", "failure"]
default = ["gst", "sixel"]
gst = ["failure", "gstreamer", "gstreamer-app", "termion"]
sixel = []

[[bin]]
name = "termplay"
path = "src/main.rs"
required-features = ["bin"]
